# GeneticAlgorithm

./: CMakeLists.txt  Chromosome.cpp  Chromosome.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Population.cpp  Population.h  README.md  main.cpp
algorithm/: Chromosome.cpp  Chromosome.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Population.cpp  Population.h
lib/: json.hpp
viewer/: code.js  drawer.html  results.json  results.tsv  viewer.html
